Moved dev dependency of bodyparser to dependency

--- a/src/package.json
+++ b/src/package.json
@@ -10,9 +10,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "body-parser": "^1.17.1"
   },
   "devDependencies": {
-    "body-parser": "^1.17.1"
   }
 }
