--- a/src/package.json
+++ b/src/package.json
@@ -10,9 +10,9 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "body-parser": "^1.17.1"
+    "socket.io": "^1.7.3"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
